Refactorings of column tool code, mostly to: 1. Use standardized JSON schema and SQL conversion across filter types, 2. Use legacy Reporter interface so exising streaming utils, etc can be used, 3. Clean up generics and some additional messy code in the column reporters
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/branches/strategy-loading@25286 4235af6a-31f9-0310-9ad3-ecf6348f2534